四季写真改善前

--- a/personal_color/templates/index.html
+++ b/personal_color/templates/index.html
@@ -50,10 +50,7 @@
             </div>
         </section>
         <!-- Image element - set the background image for the header in the line below-->
-        <div class="py-5 bg-image-full" style="{% static 'img/season.jpg' %}">
-            <!-- Put anything you want here! The spacer below with inline CSS is just for demo purposes!-->
-            <div style="height: 20rem"></div>
-        </div>
+        <div class="py-5 bg-image-full" style="background-image: url('{% static 'img/season.jpg' %}')"></div>
         <!-- Content section-->
         <section class="py-5">
             <div class="container my-5">
