--- a/personal_color/templates/introduction.html
+++ b/personal_color/templates/introduction.html
@@ -31,8 +31,9 @@
         <!-- Header - set the background image for the header in the line below-->
         <header>
             <div class="flex">
-                <p class="side-img"><img class="img-fluid rounded-circle mb-4" src="{% static 'img/clover.jpg' %}" alt="..." /></p>
-                <p class="">アプリ紹介</p>
+                <p class="side-img"><img class="img-fluid rounded-circle mb-4" src="{% static 'img/clover.jpg' %}" alt="..." />
+                    <h1>アプリ紹介</h1>
+                </p>
             </div>
         </header>
         <!-- Content section-->
@@ -58,6 +59,42 @@
                         <h2>ＳＴＡＦＦのご紹介</h2>
                         <p class="lead">パーソナルカラーは春・夏・秋・冬の4つの季節タイプに分かれています。</p>
                         <p class="mb-0">初めての方はもちろん、今までパーソナルカラー診断を受けたり、ネットや雑誌で自己診断しても、何だか結果がしっくりこないと感じている方は、ぜひチェックしてみてください。</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="wrapper">
+            <div class="container">
+                <div class="content">
+                    <div class="list">
+                        <div class="list-item">
+                            <img src="{% static 'img/huyu.jpg' %}" class="image">
+                            <div class="text">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
+                        </div>
+                        <div class="list-item">
+                            <img src="{% static 'img/happy-woman-in-floral-dress-g58183d8fe_640.jpg' %}" class="image">
+                            <div class="text">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="wrapper">
+            <div class="container">
+                <div class="content">
+                    <div class="list">
+                        <div class="list-item">
+                            <img src="{% static 'img/haru.jpg' %}" class="image">
+                            <div class="text">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
+                        </div>
+                        <div class="list-item">
+                            <img src="{% static 'img/natsu.jpg' %}" class="image">
+                            <div class="text">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
+                        </div>    
+                        <div class="list-item">
+                            <img src="{% static 'img/aki.jpg' %}" class="image">
+                            <div class="text">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
+                        </div>
                     </div>
                 </div>
             </div>
