--- a/personal_color/templates/introduction.html
+++ b/personal_color/templates/introduction.html
@@ -69,11 +69,15 @@
                     <div class="list">
                         <div class="list-item">
                             <img src="{% static 'img/huyu.jpg' %}" class="image">
-                            <div class="text">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
+                            <div class="text">ARAI<br>
+                            
+                            </div>
                         </div>
                         <div class="list-item">
                             <img src="{% static 'img/happy-woman-in-floral-dress-g58183d8fe_640.jpg' %}" class="image">
-                            <div class="text">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
+                            <div class="text">ONOGI<br>
+                            
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -85,15 +89,21 @@
                     <div class="list">
                         <div class="list-item">
                             <img src="{% static 'img/haru.jpg' %}" class="image">
-                            <div class="text">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
+                            <div class="text">IWAMOTO<br>
+                            
+                            </div>
                         </div>
                         <div class="list-item">
                             <img src="{% static 'img/natsu.jpg' %}" class="image">
-                            <div class="text">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
+                            <div class="text">TAMURA<br>
+                            
+                            </div>
                         </div>    
                         <div class="list-item">
                             <img src="{% static 'img/aki.jpg' %}" class="image">
-                            <div class="text">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
+                            <div class="text">Lee<br>
+                            ウラでこのチームを牛耳っていました！
+                            </div>
                         </div>
                     </div>
                 </div>
