--- a/personal_color/templates/index.html
+++ b/personal_color/templates/index.html
@@ -15,7 +15,7 @@
         <!-- Responsive navbar-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
-                <a class="navbar-brand" href="/">パーソナルカラー診断</a>
+                <font face="筑紫ゴシック"><a class="navbar-brand" href="/">パーソナルカラー診断</a></font>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
@@ -32,8 +32,12 @@
         <header class="py-5 bg-image-full" style="background-image: url('{% static 'img/new-roses-g44a7cef51_1920.jpg' %}')">
             <div class="text-center my-5">
                 <img class="img-fluid rounded-circle mb-4" src="{% static 'img/clover.jpg' %}" alt="..." />
-                <h1 class="text-white fs-3 fw-bolder">Personal Color</h1>
-                <h4 class="text-white-50 mb-0">あなたの顔写真からパーソナルカラーを診断！</h4>
+                <font face="Century">
+                    <h1 class="text-white fs-1 fw-bolder">Personal Color</h1>
+                </font>
+                <font face="筑紫ゴシック">
+                    <h4 class="text-white-50 mb-0">あなたの顔写真からパーソナルカラーを診断！</h4>
+                </font>
             </div>
         </header>
         <!-- Content section-->
