--- a/personal_color/templates/login.html
+++ b/personal_color/templates/login.html
@@ -15,7 +15,7 @@
         <!-- Responsive navbar-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
-                <a class="navbar-brand" href="/">パーソナルカラー診断</a>
+              <font face="筑紫ゴシック"><a class="navbar-brand" href="/">パーソナルカラー診断</a></font>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
@@ -23,7 +23,7 @@
                         <li class="nav-item"><a class="nav-link" href="/introduction">アプリ紹介</a></li>
                         <li class="nav-item"><a class="nav-link" href="/form">フォーム</a></li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="/login">ログイン</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">ログアウト</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/logout">ログアウト</a></li>
                     </ul>
                 </div>
             </div>
@@ -48,12 +48,11 @@
                 <input type="password" name="password" required="required" placeholder="Password">
               </div>
               <div class="button-panel">
-                <input type="submit" class="button" title="Sign In" value="Sign In">
+                <input type="submit" class="button" title="Sign In" value="ログイン">
               </div>
             </form>
             <div class="form-footer">
-              <p><a href="#">Create an account</a></p>
-              <p><a href="#">Forgot password?</a></p>
+              <p><a href="#">新規登録</a></p>
             </div>
           </div>
         <!-- Footer-->
