--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -84,7 +84,7 @@ body {
   line-height: var(--bs-body-line-height);
   color: var(--bs-body-color);
   text-align: var(--bs-body-text-align);
-  background-color: var(--bs-body-bg);
+  background-color: #e9e9e9;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
@@ -11289,8 +11289,9 @@ textarea.form-control-lg {
 .bg-image-full {
   background-repeat: no-repeat;
   background-attachment: scroll;
-  background-position: center;
+  background-position: top;
   background-size:contain;                               /* 画像のサイズを指定    */
   width:100%;                                            /* 横幅のサイズを指定    */
   height:100%;
 }
+
