--- a/personal_color/templates/form.html
+++ b/personal_color/templates/form.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>パーソナルカラー診断</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="{% static 'assets/favicon.ico' %}" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="{% static 'css/introduction.css' %}" rel="stylesheet" />
     </head>
@@ -41,27 +41,18 @@
             <div class="container my-5">
                 <div class="row justify-content-center">
                     <div class="col-lg-6">
-                        <form>
+                        <form method="post">
+                            {% csrf_token %}
+
+                            {{ form.non_field_errors }}
+
+                            {% for field in form %}
                             <div class="form-group">
-                                <label>氏名：</label>
-                                <input type="text" class="form-control" placeholder="山田 太郎" name="name">
+                                {{ field.label_tag }}
+                                {{ field }}
+                                {{ field.errors }}
                             </div>
-                            <div class="form-group">
-                                <label>電話番号：</label>
-                                <input type="text" class="form-control" placeholder="XXX-XXXX-XXXX" name="number">
-                            </div>
-                            <div class="form-group">
-                                <label>お問い合わせの種類：</label>
-                                <select class="form-control" name="type">
-                                    <option>商品について</option>
-                                    <option>アプリについて</option>
-                                    <option>その他について</option>
-                                </select>
-                            </div>
-                            <div class="form-group">
-                                <label>お問い合わせ内容：</label>
-                                <textarea class="form-control" rows="3" name="contents"></textarea>
-                            </div>
+                            {% endfor %}
                         </form>
                     </div>
                 </div>
