紹介ページレイアウト変更中

--- a/personal_color/templates/introduction.html
+++ b/personal_color/templates/introduction.html
@@ -31,7 +31,7 @@
         <!-- Header - set the background image for the header in the line below-->
         <header>
             <div class="flex">
-                <p class="side-img"><img class="img-fluid rounded-circle mb-4" src="{% static 'img/clover.jpg' %}" alt="..." />
+                <p class="side-img"><img class="img-fluid rounded-circle mb-0" src="{% static 'img/clover.jpg' %}" alt="..." />
                     <h1>アプリ紹介</h1>
                 </p>
             </div>
@@ -41,24 +41,32 @@
             <div class="container my-5">
                 <div class="row justify-content-center">
                     <div class="col-lg-6">
-                        <h2>パーソナルカラーとは</h2>
-                        <p class="lead">好きな色の服を買ったけれど、なんだか似合っていない・・・と感じたことはありませんか？</p>
-                        <p class="mb-0">それはあなたのパーソナルカラーと服の色がマッチしていないからかもしれません。</p>
-                        <p class="mb-0">パーソナルカラーとは、ご自身の持っている肌の色・瞳の色によって生まれ持った</p>
-                        <p class="mb-0">お肌タイプのことで、春・夏・秋・冬の４つのグループに分けられます。</p>
-                        <p class="mb-0">ぜひご自身のパーソナルカラーを見つけてみてください。</p>
+                        <font face="筑紫ゴシック">
+                            <h2>パーソナルカラーとは</h2>
+                            <p class="lead">好きな色の服を買ったけれど、なんだか似合っていない・・・と感じたことはありませんか？</p>
+                            <p class="mb-0">それはあなたのパーソナルカラーと服の色がマッチしていないからかもしれません。パーソナルカラーとは、ご自身の持っている肌の色・瞳の色によって生まれ持ったお肌タイプのことで、～春・夏・秋・冬～の４つのグループに分けられます。ぜひご自身のパーソナルカラーを見つけてみてください。</p>
+                        </font>
+                        <div class="dd">
+                            <div class="row">
+                              <div class="img">
+                                <img src="{% static 'img/colored-pencils-gdcb499de0_640.jpg'%}" alt="" class="img-fluid">
+                              </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
         <!-- Content section-->
-        <section class="py-5">
+        <section class="py-0">
             <div class="container my-5">
                 <div class="row justify-content-center">
                     <div class="col-lg-6">
-                        <h2>ＳＴＡＦＦのご紹介</h2>
-                        <p class="lead">パーソナルカラーは春・夏・秋・冬の4つの季節タイプに分かれています。</p>
-                        <p class="mb-0">初めての方はもちろん、今までパーソナルカラー診断を受けたり、ネットや雑誌で自己診断しても、何だか結果がしっくりこないと感じている方は、ぜひチェックしてみてください。</p>
+                        <font face="筑紫ゴシック"><hr>
+                            <h2>ＳＴＡＦＦのご紹介</h2>
+                            <p class="lead">パーソナルカラーは～春・夏・秋・冬～の4つの季節タイプに分かれています。</p>
+                            <p class="mb-0">初めての方はもちろん、今までパーソナルカラー診断を受けたり、ネットや雑誌で自己診断しても、何だか結果がしっくりこないと感じている方は、ぜひチェックしてみてください。</p>
+                        </font>
                     </div>
                 </div>
             </div>
