--- a/personal_color/templates/index.html
+++ b/personal_color/templates/index.html
@@ -15,7 +15,9 @@
         <!-- Responsive navbar-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
-                <font face="筑紫ゴシック"><a class="navbar-brand" href="/">パーソナルカラー診断</a></font>
+                <font face="筑紫ゴシック">
+                    <a class="navbar-brand" href="/">パーソナルカラー診断</a>
+                </font>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
@@ -45,9 +47,11 @@
             <div class="container my-5">
                 <div class="row justify-content-center">
                     <div class="col-lg-6">
-                        <h2>パーソナルカラーを診断！</h2>
-                        <p class="lead">ご自身に似合う色をご存じでしょうか。好きな色はあるけど派手すぎる！色を選ぶときにいつも同じ色味や、無難な白や黒を選んでしまうことはありませんか。</p>
-                        <p class="mb-0">顔写真からパーソナルカラーを診断し、あなたに似合う色を診断できます。</p>
+                        <font face="筑紫ゴシック">
+                            <h2>パーソナルカラーを診断！</h2>
+                            <p class="lead">ご自身に似合う色をご存じでしょうか。好きな色はあるけど派手すぎる！色を選ぶときにいつも同じ色味や、無難な白や黒を選んでしまうことはありませんか。</p>
+                            <p class="mb-0">顔写真からパーソナルカラーを診断し、あなたに似合う色を診断できます。</p>
+                        </font>
                     </div>
                 </div>
             </div>
@@ -74,22 +78,26 @@
             <div class="container my-5">
                 <div class="row justify-content-center">
                     <div class="col-lg-6">
-                        <h2>さっそく診断してみましょう</h2>
-                        <p class="lead">パーソナルカラーは春・夏・秋・冬の4つの季節タイプに分かれています。</p>
-                        <p class="mb-0">初めての方はもちろん、今までパーソナルカラー診断を受けたり、ネットや雑誌で自己診断しても、何だか結果がしっくりこないと感じている方は、ぜひチェックしてみてください。</p><hr>
+                        <font face="筑紫ゴシック">
+                            <h2>さっそく診断してみましょう</h2>
+                            <p class="lead">パーソナルカラーは～春・夏・秋・冬～の4つの季節タイプに分かれています。</p>
+                            <p class="mb-0">初めての方はもちろん、今までパーソナルカラー診断を受けたり、ネットや雑誌で自己診断しても、何だか結果がしっくりこないと感じている方は、ぜひチェックしてみてください。</p><hr>
+                        </font>
                     </div>
                 </div>
             </div>
-            <div class="text-center">
-                <label>性別</label>
-                <label for="r_female">女性 <input id="r_female" type="radio" name="gender" value="女性"></label>
-                <label for="r_male">男性 <input id="r_male" type="radio" name="gender" value="男性"></label>
-                <label for="r_others">その他 <input id="r_others" type="radio" name="gender" value="その他"></label>
+            <div class="text-center lead">
+                <font face="筑紫ゴシック">
+                    <label>性別</label>
+                    <label for="r_female">女性 <input id="r_female" type="radio" name="gender" value="女性"></label>
+                    <label for="r_male">男性 <input id="r_male" type="radio" name="gender" value="男性"></label>
+                    <label for="r_others">その他 <input id="r_others" type="radio" name="gender" value="その他"></label>
             </div>
-            <div class="text-center">
+            <div class="text-center lead">
                 <form method="post" enctype="multipart/form-data">
                     <input type="file" name="avatar"><br><br>
                     <button type="submit">送信</button>
+                </font>
                 </form>
             </div>
         </section>
