--- a/personal_color/templates/introduction.html
+++ b/personal_color/templates/introduction.html
@@ -15,7 +15,9 @@
         <!-- Responsive navbar-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
-                <font face="筑紫ゴシック"><a class="navbar-brand" href="/">パーソナルカラー診断</a></font>
+                <font face="筑紫ゴシック">
+                    <a class="navbar-brand" href="/">パーソナルカラー診断</a>
+                </font>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
@@ -31,8 +33,10 @@
         <!-- Header - set the background image for the header in the line below-->
         <header>
             <div class="flex">
-                <p class="side-img"><img class="img-fluid rounded-circle mb-0" src="{% static 'img/clover.jpg' %}" alt="..." />
-                    <h1>アプリ紹介</h1>
+                <p class="content">
+                    <font face="筑紫ゴシック">
+                        <h1>アプリ紹介</h1>
+                    </font>
                 </p>
             </div>
         </header>
