ヘッダーの位置揃え

--- a/personal_color/templates/form.html
+++ b/personal_color/templates/form.html
@@ -33,9 +33,9 @@
         <!-- Header - set the background image for the header in the line below-->
         <header>
             <div class="flex">
-                <p class="side-img"><img class="img-fluid rounded-circle mb-0" src="{% static 'img/clover.jpg' %}" alt="..." />
+                <p class="mx-5">
                     <font face="筑紫ゴシック">
-                        <h1>コンタクトフォーム</h1>
+                        <h1 class="my-4">コンタクトフォーム</h1>
                     </font>
                 </p>
             </div>
@@ -62,12 +62,12 @@
                 </div>
                 <div class="row center-block text-center">
                     <div class="col-1"></div>
-                    <div class="col-5">
-                        <button type="button" class="btn btn-outline-secondary btn-block">閉じる</button>
-                    </div>
-                    <div class="col-5">
-                        <button type="button" class="btn btn-outline-primary btn-block">進む</button>
-                    </div>
+                        <div class="col-5">
+                            <button type="button" class="btn btn-outline-secondary btn-block">閉じる</button>
+                        </div>
+                        <div class="col-5">
+                            <button type="button" class="btn btn-outline-primary btn-block">進む</button>
+                        </div>
                 </div>
                 <br>
             </div>
