--- a/personal_color/templates/introduction.html
+++ b/personal_color/templates/introduction.html
@@ -16,7 +16,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
                 <font face="筑紫ゴシック">
-                    <a class="navbar-brand" href="/">パーソナルカラー診断</a>
+                    <a class="navbar-brand mx-2" href="/">パーソナルカラー診断</a>
                 </font>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -33,9 +33,9 @@
         <!-- Header - set the background image for the header in the line below-->
         <header>
             <div class="flex">
-                <p class="content">
+                <p>
                     <font face="筑紫ゴシック">
-                        <h1>アプリ紹介</h1>
+                        <h1 class="my-4">アプリ紹介</h1>
                     </font>
                 </p>
             </div>
@@ -52,7 +52,6 @@
                         </font>
                         <div class="dd">
                             <div class="row">
-                              <div class="img">
                                 <img src="{% static 'img/colored-pencils-gdcb499de0_640.jpg'%}" alt="" class="img-fluid">
                               </div>
                             </div>
@@ -61,7 +60,6 @@
                 </div>
             </div>
         </section>
-        <!-- Content section-->
         <section class="py-0">
             <div class="container my-5">
                 <div class="row justify-content-center">
