フォームデザイン変更

--- a/personal_color/templates/form.html
+++ b/personal_color/templates/form.html
@@ -72,7 +72,9 @@
                 <br>
             </div>
         </section>
-        <!-- Footer-->
+        <div class="my-0">
+            <img src="{% static 'img/new-background-ga8ed9e98d_1920.jpg'%}" alt="" class="img-fluid">
+        </div>
         <footer class="py-5 bg-dark">
             <div class="container"><p class="m-0 text-center text-white">&copy; Personal Color GroupC 2022</p></div>
         </footer>
