--- a/personal_color/templates/index.html
+++ b/personal_color/templates/index.html
@@ -16,7 +16,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
                 <font face="筑紫ゴシック">
-                    <a class="navbar-brand mx-2" href="/">パーソナルカラー診断</a>
+                    <a class="navbar-brand" href="/">パーソナルカラー診断</a>
                 </font>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
