--- a/personal_color/templates/login.html
+++ b/personal_color/templates/login.html
@@ -57,6 +57,9 @@
               <p><a href="#">新規登録</a></p>
             </div>
           </div>
+          <div class="my-0">
+            <img src="{% static 'img/new-background-gadefe0c79_1280.jpg'%}" alt="" class="img-fluid">
+        </div>
         <!-- Footer-->
         <footer class="py-5 bg-dark">
             <div class="container"><p class="m-0 text-center text-white">&copy; Personal Color GroupC 2022</p></div>
