フォームヘッダー変更

--- a/static/css/introduction.css
+++ b/static/css/introduction.css
@@ -11291,7 +11291,7 @@ textarea.form-control-lg {
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center;
-  background-size: cover;
+  background-size: contain;
 }
 .diagnose {
   text-align: center;
