--- a/personal_color/templates/form.html
+++ b/personal_color/templates/form.html
@@ -32,10 +32,10 @@
         </nav>
         <!-- Header - set the background image for the header in the line below-->
         <header>
-            <div class="flex">
-                <p class="mx-5">
+            <div class="flex justify-content-center">
+                <div class="m-1 py-3 bg-image-full" style="background-image: url('{% static 'img/bw-pale.png' %}')">
                     <font face="筑紫ゴシック">
-                        <h1 class="my-4">コンタクトフォーム</h1>
+                        <h1 class="my-0 card-header-tabs">コンタクト<br>フォーム</h1>
                     </font>
                 </p>
             </div>
