--- a/personal_color/templates/introduction.html
+++ b/personal_color/templates/introduction.html
@@ -32,12 +32,11 @@
         </nav>
         <!-- Header - set the background image for the header in the line below-->
         <header>
-            <div class="flex">
-                <p>
+            <div class="flex justify-content-center">
+                    <div class="m-1 py-4 bg-image-full" style="background-image: url('{% static 'img/pw-pale.png' %}')">
                     <font face="筑紫ゴシック">
-                        <h1 class="my-4">アプリ紹介</h1>
+                    <h1 class="my-4 card-header-tabs">アプリ紹介</h1>
                     </font>
-                </p>
             </div>
         </header>
         <!-- Content section-->
