interupted by arai

--- a/static/css/introduction.css
+++ b/static/css/introduction.css
@@ -11287,7 +11287,7 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
-.bg-image-full {
+.bg-image-full-2 {
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center;
