--- a/personal_color/templates/form.html
+++ b/personal_color/templates/form.html
@@ -32,6 +32,21 @@
         </nav>
         <!-- Header - set the background image for the header in the line below-->
         <header>
+            {% if messages %}
+            <div class="container may-div-style">
+                <div class="row">
+                    <ul class="messages" style="list-style: none;">
+                        {% for message in messages %}
+                        <li {% if message.tags %} class="{{ message.tags }}"
+                        {% endif %}>
+                        {{ message }}
+                        </li>
+                        {% endfor %}
+                    </ul>
+                </div>
+            </div>
+            {% endif %}
+
             <div class="flex justify-content-center">
                 <div class="m-1 py-3 bg-image-full" style="background-image: url('{% static 'img/bw-pale.png' %}')">
                     <font face="筑紫ゴシック">
@@ -57,16 +72,13 @@
                                 {{ field.errors }}
                             </div>
                             {% endfor %}
-                        </form>
                     </div>
                 </div>
                 <div class="row center-block text-center">
                     <div class="col-1"></div>
                         <div class="col-5">
-                            <button type="button" class="btn btn-outline-secondary btn-block">閉じる</button>
-                        </div>
-                        <div class="col-5">
-                            <button type="button" class="btn btn-outline-primary btn-block">進む</button>
+                            <button class="btn btn-outline-primary btn-block" type="submit">送信</button>
+                        </form>
                         </div>
                 </div>
                 <br>
