--- a/personal_color/templates/introduction.html
+++ b/personal_color/templates/introduction.html
@@ -9,7 +9,7 @@
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="{% static 'assets/favicon.ico' %}" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="{% static 'css/introduction.css' %}" rel="stylesheet" />
+        <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
     </head>
     <body>
         <!-- Responsive navbar-->
@@ -33,7 +33,7 @@
         <!-- Header - set the background image for the header in the line below-->
         <header>
             <div class="flex justify-content-center">
-                    <div class="m-1 py-4 bg-image-full" style="background-image: url('{% static 'img/pw-pale.png' %}')">
+                    <div class="m-1 py-4 bg-image-full-2" style="background-image: url('{% static 'img/pw-pale.png' %}')">
                     <font face="筑紫ゴシック">
                     <h1 class="my-4 card-header-tabs">アプリ紹介</h1>
                     </font>
