--- a/personal_color/templates/form.html
+++ b/personal_color/templates/form.html
@@ -48,11 +48,11 @@
             {% endif %}
 
             <div class="flex justify-content-center">
-                <div class="m-1 py-3 bg-image-full" style="background-image: url('{% static 'img/bw-pale.png' %}')">
+                <div class="m-1 py-1 px-0 bg-image-full-2" style="background-image: url('{% static 'img/bw-pale.png' %}')">
                     <font face="筑紫ゴシック">
-                        <h1 class="my-0 card-header-tabs">コンタクト<br>フォーム</h1>
+                        <h1 class="my-1 card-header-tabs">コンタクト<br>フォーム</h1>
                     </font>
-                </p>
+                </div>
             </div>
         </header>
         <!-- Content section-->
