--- a/personal_color/templates/introduction.html
+++ b/personal_color/templates/introduction.html
@@ -33,10 +33,11 @@
         <!-- Header - set the background image for the header in the line below-->
         <header>
             <div class="flex justify-content-center">
-                    <div class="m-1 py-4 bg-image-full-2" style="background-image: url('{% static 'img/pw-pale.png' %}')">
+                <div class="m-2 py-4 bg-image-full" style="background-image: url('{% static 'img/pw-pale.png' %}')">
                     <font face="筑紫ゴシック">
-                    <h1 class="my-4 card-header-tabs">アプリ紹介</h1>
+                    <h1 class="my-1 card-header-tabs">アプリ紹介</h1>
                     </font>
+                </div>
             </div>
         </header>
         <!-- Content section-->
