--- a/personal_color/templates/form.html
+++ b/personal_color/templates/form.html
@@ -76,7 +76,7 @@
                 </div>
                 <div class="row center-block text-center">
                     <div class="col-1"></div>
-                        <div class="col-5">
+                        <div class="row-cols-6 my-3">
                             <button class="btn btn-outline-primary btn-block" type="submit">送信</button>
                         </form>
                         </div>
