--- a/personal_color/templates/result.html
+++ b/personal_color/templates/result.html
@@ -32,11 +32,11 @@
             </div>
         </nav>
         <!-- Header-->
-        <header class="py-5 bg-image-full" style="background-image: url('{% static 'img/blue-g3334803a7_1280.jpg' %}')">
+        <header class="py-5 bg-image-full" style="background-image: url('{% static 'img/blue-g3334803a7_1280.jpg' %}')" >
             <div class="container px-4 px-lg-5 my-5">
                 <div class="text-center text-white">
-                    <h1 class="display-4 fw-bolder">診断結果</h1>
-                    <p class="lead fw-normal text-white-50 mb-0">あなたのパーソナルカラーはこちらです</p>
+                    <h1 class="display-4 fw-bolder ">診断結果</h1>
+                    <p class="lead fw-normal mb-0">あなたのパーソナルカラーはこちらです</p>
                 </div>
             </div>
         </header>
@@ -57,15 +57,9 @@
         </section>
         <!-- Image element - set the background image for the header in the line below-->
         <ul style="list-style: none; " class="color-vw">
-            <li><img src="{% static '/img/coral.png' %}" alt=""></a>
-                <p>coral</p>
-            </li>
-            <li><img src="{% static '/img/wheat.png' %}" alt=""></a>
-                <p>wheat</p>
-            </li>
-            <li><img src="{% static '/img/teal.png' %}" alt=""></a>
-                <p>teal</p>
-            </li>
+            <li><img src="{% static '/img/color/haru-pink.png' %}" alt=""></a></li>
+            <li><img src="{% static '/img/color/haru-white.png' %}" alt=""></a></li>
+            <li><img src="{% static '/img/color/haru-blue.png' %}" alt=""></a></li>
         </ul>
         <!-- Image element - set the background image for the header in the line below-->
         <ul style="list-style: none; " class="clothes-vw">
