--- a/personal_color/templates/login.html
+++ b/personal_color/templates/login.html
@@ -31,26 +31,29 @@
             </div>
         </nav>
         <!-- Content section-->
+        <div class="my-0">
+          <img src="{% static 'img/new1-background-gadefe0c79_1280.jpg'%}" alt="" class="img-fluid">
+        </div>
         <div class="form-wrapper">
-            <h1>ログイン</h1>
-            <form>
-              <div class="form-item">
-                <label for="email"></label>
-                <input type="email" name="email" required="required" placeholder="Email Address">
-              </div>
-              <div class="form-item">
-                <label for="password"></label>
-                <input type="password" name="password" required="required" placeholder="Password">
-              </div>
-              <div class="button-panel">
-                <input type="submit" class="button" title="Sign In" value="ログイン">
-              </div>
-            </form>
-            <div class="form-footer">
-              <p><a href="#">新規登録</a></p>
+          <h1>ログイン</h1>
+          <form>
+            <div class="form-item">
+              <label for="email"></label>
+              <input type="email" name="email" required="required" placeholder="Email Address">
             </div>
+            <div class="form-item">
+              <label for="password"></label>
+              <input type="password" name="password" required="required" placeholder="Password">
+            </div>
+            <div class="button-panel">
+              <input type="submit" class="button" title="Sign In" value="ログイン">
+            </div>
+          </form>
+          <div class="form-footer">
+            <p><a href="#">新規登録</a></p>
           </div>
-          <div class="my-0">
+        </div>
+        <div class="my-0">
             <img src="{% static 'img/new-background-gadefe0c79_1280.jpg'%}" alt="" class="img-fluid">
         </div>
         <!-- Footer-->
