--- a/personal_color/templates/result.html
+++ b/personal_color/templates/result.html
@@ -25,7 +25,7 @@
                         <li class="nav-item"><a class="nav-link" href="/">ホーム</a></li>
                         <li class="nav-item"><a class="nav-link" href="/introduction">アプリ紹介</a></li>
                         <li class="nav-item"><a class="nav-link" href="/form">フォーム</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/login!">ログイン</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/login">ログイン</a></li>
                         <li class="nav-item"><a class="nav-link" href="/logout">ログアウト</a></li>
                     </ul>
                 </div>
